# php-emallocator

./: .gitattributes  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.txt  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/emallocator/: emallocator.hpp
test/: CMakeLists.txt
test/source/: emallocator_test.cc  emallocator_test.cpp  test_zend_alloc.h
